[tool.poetry]
name = "power-graph"
version = "0.1.0"
description = ""
authors = ["Soeren Wegener <wegener92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
